# audioFramework

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp  Log.cpp  Log.hpp  Playable.cpp  Playable.hpp  Sample.cpp  Sample.hpp  Sampler.cpp  Sampler.hpp  main.cpp  mainUi.cpp  readme.md  run.sh
Core/: Engine.cpp  Engine.hpp  Log.cpp  Log.hpp  Renderable.hpp  Sample.cpp  Sample.hpp
Playable/: Playable.cpp  Playable.hpp  Sampler.cpp  Sampler.hpp
Playable/Instruments/: Envelope.cpp  Envelope.hpp  GranularSynth.cpp  GranularSynth.hpp  Instrument.cpp  Instrument.hpp  InstrumentsUtils.cpp  InstrumentsUtils.hpp  LoopingSampler.cpp  LoopingSampler.hpp  Sampler.cpp  Sampler.hpp
